fix(gradle-plugin): open jdk.internal.access for Robolectric on JDK 25+
Robolectric 4.16's `FileDescriptorInterceptor.setInt` reflects into
`jdk.internal.access.SharedSecrets#getJavaIOFileDescriptorAccess()`
to mutate `FileDescriptor.fd`. On SDK 36 sandboxes the framework's
`ApplicationSharedMemory.create()` runs during
`AndroidTestEnvironment.setUpApplicationState` and hits that
interceptor; under JDKs that strictly enforce module integrity this
raises `IllegalAccessException` because `java.base` does not export
`jdk.internal.access` to the unnamed module, which Robolectric
wraps as "Failed to interact with raw FileDescriptor internals;
perhaps JRE has changed?".

Add `--add-opens=java.base/jdk.internal.access=ALL-UNNAMED` to the
shared JVM-args list (consumed by `composePreviewRender`, the
resource render task, and the daemon harness). Also fold the
hand-rolled list in `AndroidPreviewSupport` for the resource task
into `AndroidPreviewClasspath.buildJvmArgs()` so the two paths
stay in sync.

Fixes #1328.